--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.9.16",
+    "pdfkit": "^0.16.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
